--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "json-server": "^1.0.0-alpha.23",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.2.1",
+    "react-rating-stars-component": "^2.2.0",
     "react-router-dom": "^6.23.0"
   },
   "devDependencies": {
