--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "axios": "^1.6.8",
     "bootstrap": "^5.3.3",
     "dotenv": "^16.4.5",
-    "json-server": "^1.0.0-alpha.23",
+    "json-server": "^1.0.0-beta.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.2",
     "react-dom": "^18.2.0",
