--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "json-server": "^1.0.0-beta.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.2",
+    "react-credit-cards-2": "^1.0.2",
     "react-dom": "^18.2.0",
     "react-icons": "^5.2.1",
     "react-rating-stars-component": "^2.2.0",
