--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-rating-stars-component": "^2.2.0",
     "react-router-dom": "^6.23.0",
     "react-toastify": "^10.0.5",
+    "react-transition-group": "^4.4.5",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
